--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,35 @@
 
 <head>
     <title>F1 - RC Car</title>
+    <style>
+        body {
+            position: fixed;
+            top: 0px;
+            left: 0px;
+            right: 0px;
+            bottom: 0px;
+            background: #111;
+        }
+        #feed {
+            width: 100%;
+            height: 100%;
+            max-width: 100%;
+            max-height: 100%;
+            display:block;
+            position: fixed;
+            margin: 0%;
+            padding: 0%;
+            background-image: url('stream.mjpg');
+        }
+    </style>
 </head>
 
-<body style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background: #111;">
-    <img src="stream.mjpg"
-        style="position: fixed; top: 0px; left: 0px; right: 0px; height: 100%; width: calc(100% + 2px); object-fit: contain;">
+<body>
+    <div id="feed">
+
+    </div>
+    <!-- <img src="stream.mjpg"
+        style="position: fixed; top: 0px; left: 0px; right: 0px; height: 100%; width: calc(100% + 2px); object-fit: contain;"> -->
 </body>
 
 </html>
