--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,19 @@
             bottom: 0px;
             background: #111;
         }
+
         #feed {
             width: 100%;
             height: 100%;
             max-width: 100%;
             max-height: 100%;
-            display:block;
-            position: fixed;
+            display: block;
             margin: 0%;
             padding: 0%;
             background-image: url('stream.mjpg');
+            background-repeat: no-repeat;
+            background-position: center;
+            position: relative;
         }
     </style>
 </head>
