--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,11 @@
 
         #feed {
             width: 100%;
-            height: 100%;
+            height: auto;
             max-width: 100%;
             max-height: 100%;
+            min-height: 100%;
+            min-width: 480px;
             display: block;
             margin: 0%;
             padding: 0%;
