--- a/public/index.html
+++ b/public/index.html
@@ -13,29 +13,30 @@
         }
 
         #feed {
-            width: 100%;
-            height: auto;
             max-width: 100%;
             max-height: 100%;
-            min-height: 100%;
-            min-width: 480px;
-            display: block;
-            margin: 0%;
-            padding: 0%;
-            background-image: url('stream.mjpg');
-            background-repeat: no-repeat;
-            background-position: center;
-            position: relative;
+        }
+
+        img {
+            max-width: 100%;
+            max-height: 100%;
+
+            position: fixed;
+            top: 0px;
+            left: 0px;
+            right: 0px;
+            height: 100%;
+            width: calc(100% + 2px);
+            object-fit: contain;
         }
     </style>
 </head>
 
 <body>
     <div id="feed">
-
+        <img src="stream.mjpg">
     </div>
-    <!-- <img src="stream.mjpg"
-        style="position: fixed; top: 0px; left: 0px; right: 0px; height: 100%; width: calc(100% + 2px); object-fit: contain;"> -->
+
 </body>
 
 </html>
