--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,8 @@
     </style>
 
     <script>
-        function rotateImageClockWise(e) {
-            // var myImage = document.getElementById("myImage");
-            e.target.style.transform = 'rotate(90deg)';
+        function rotateImageClockWise() {
+            event.srcElement.style.transform = 'rotate(90deg)';
         }
     </script>
 </head>
@@ -52,7 +51,7 @@
         <img src="stream.mjpg">
     </div>
     <div id="settings">
-        <button onclick="rotateImageClockWise()">Rotate</button>
+        <button onclick="rotateImageClockWise(this)">Rotate</button>
     </div>
 
 </body>
