--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                 <option value="brake">Brake</option>
             </select>
             <br>
-            <input type="button" onclick="bindAction();" value="Bind" />
+            <input id = "bind_btn" type="button" onclick="bindAction();" value="Bind" />
         </form>
     </div>
 </body>
